<resources>
    <string name="app_name">Pegasus</string>
    <string name="title_activity_login">Sign in</string>


    <string name="login_id">"     Login ID"</string>
    <string name="login_password">"     Password"</string>
    <string name="remember_me">"Remember Me"</string>
    <string name="login">"LOGIN"</string>
    <string name="forgot_password">"Forgot Password?"</string>

    <string name="space">""</string>

    <string name="way_bill">"Waybill :"</string>
    <string name="pickup_date">"Pickup Date :"</string>
    <string name="eta">"ETA :"</string>
    <string name="actual_delivery_date">"Actual Delivery Date :"</string>
    <string name="current_status">"Current Status :"</string>
    <string name="contact_name">"Contact Name :"</string>
    <string name="company_name">"Company Name :"</string>
    <string name="address">"Address :"</string>
    <string name="city">"City :"</string>
    <string name="state">"State :"</string>
    <string name="zip">"Zip :"</string>
    <string name="country">"Country :"</string>
    <string name="to">"TO"</string>

    <string name="viewmaps">"View Map"</string>


    <string name="pieces">"Pieces "</string>
    <string name="description">"Description "</string>
    <string name="weight">"Weight "</string>

    <string name="openshipent">"OPEN SHIPMMENTS"</string>
    <string name="podshipment">"POD SHIPMMENTS LAST 7 DAYS"</string>

    <string name="shipmentinfo">"SHIPMENTS INFO"</string>
    <string name="shipperinfo">"SHIPPER INFO"</string>
    <string name="consigneeinfo">"CONSIGNEE INFO"</string>
    <string name="lineinfo">"LINE ITEMS"</string>


    <string name="ambiguity">"POD SHIPMMENTS LAST 7 DAYS POD SHIPMMENTS LAST 7 DAYS POD SHIPMMENTS LAST 7 DAYS POD SHIPMMENTS LAST 7 DAYS"</string>
    <string name="title_activity_maps">Map</string>


</resources>
