<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="3">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPieces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pieces"
                android:textColor="@color/black"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/black"
                android:layout_weight="1" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:layout_weight="1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
