<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/login_logo"
            android:contentDescription="@string/space"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textSize="@dimen/activity_text_input_layout_size">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etloginid"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border"
                android:drawableStart="@mipmap/user"
                android:ems="10"
                android:paddingStart="@dimen/activity_textsize"
                android:paddingEnd="@dimen/activity_textsize"
                android:gravity="center|start"
                android:hint="@string/login_id"
                android:inputType="text"
                android:textSize="@dimen/activity_textsize"
                android:textStyle="bold" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textSize="@dimen/activity_text_input_layout_size">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_border"
                android:drawableStart="@mipmap/key"
                android:ems="10"
                android:paddingStart="@dimen/activity_textsize"
                android:paddingEnd="@dimen/activity_textsize"
                android:gravity="center|start"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:textSize="@dimen/activity_textsize"
                android:textStyle="bold">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkRemeber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/activity_textsize">

            </androidx.appcompat.widget.AppCompatCheckBox>



        <Button
            android:id="@+id/btnlogin"
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textSize="@dimen/activity_textsize"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:background="@color/green"
            android:layout_gravity="center">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/forgot_password"
            android:textSize="@dimen/activity_textsize"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center">

        </TextView>




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
