<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_8dp"
    android:layout_marginBottom="@dimen/_8dp"
    android:layout_marginStart="@dimen/_8dp"
    android:layout_marginEnd="@dimen/_8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/horizantallayout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/way_bill"
                android:textColor="@color/thickgrey"
                style="@style/TextAppearance.AppCompat.Small"
                android:gravity="end"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvwaybillno"
                style="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"/>


        </LinearLayout>

        <LinearLayout
            style="@style/horizantallayout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pickup_date"
                android:textColor="@color/thickgrey"
                style="@style/TextAppearance.AppCompat.Small"
                android:gravity="end"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvpickupdate"
                style="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/horizantallayout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eta"
                android:textColor="@color/thickgrey"
                style="@style/TextAppearance.AppCompat.Small"
                android:gravity="end"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tveta"
                style="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/horizantallayout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/actual_delivery_date"
                android:textColor="@color/thickgrey"
                style="@style/TextAppearance.AppCompat.Small"
                android:gravity="end"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvactualdeliverydate"
                style="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"/>


        </LinearLayout>

        <LinearLayout
            style="@style/horizantallayout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_status"
                android:textColor="@color/thickgrey"
                style="@style/TextAppearance.AppCompat.Small"
                android:gravity="end"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvcurrentstatus"
                style="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_8dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>